[package]
name = "poem-toy"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
poem = { version = "1.3.48", features = ["embed", "static-files", "multipart"] }
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
rust-embed = "6.3"
serde = { version = "1.0.130", features = ["derive"] }
